--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   
      
   <div class="container home">
+    <section class="home-intro">
+      <h2>Welcome to Fun Bus!</h2>
+      <p>Travelling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+    </section>
    
     <section class="content-section">
       <div class="text-content">
