--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 
 <body>
   <header>
-    <h1 class="logo">Fun Bus</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-    </nav>
+    <div class="constraint-wrapper">
+      <h1 class="logo">Fun Bus</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+  </div>
   </header>
   
      
   <div class="container home">
-    <section class="home-intro">
+    <img src="img/fun-bus.jpg" alt="">
+    <section class="content-section home-intro">
       <h2>Welcome to Fun Bus!</h2>
       <p>Travelling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
     </section>
